FPSMatch v 1.3.0 Part 7 ADD - FPSMHelpManager 提供fpsm命令帮助注册 CHANGE - FPSMCommand help逻辑大修 现在能够直接查看指令树和能够收起指令了。 CHANGE - 所有的TeamCapability和MapCapability都兼容了新版帮助系统。 CHANGE - 完善了所有包含命令实现的Capability的逻辑 CHANGE - 规范了语言文件 TODO: 1.删除ShopMap.class，并修改原有依赖此class的所有逻辑

--- a/src/main/resources/assets/fpsmatch/lang/en_us.json
+++ b/src/main/resources/assets/fpsmatch/lang/en_us.json
@@ -34,6 +34,8 @@
   "commands.fpsm.shop.modify.success": "Successfully modified the shop slot type %2$d index %3$d for '%1$s' shop with item '%4$s' at a cost of %5$d.",
   "commands.fpsm.shop.modify.failed": "Failed to modify the shop. Please check your permissions or if the shop exists.",
   "commands.fpsm.modify.kits.add.success": "Successfully added start kit '%1$s' for team '%2$s'.",
+  "commands.fpsm.modify.kits.add.empty": "Cannot add empty item as start kit.",
+  "commands.fpsm.modify.kits.add.failed": "Failed to add start kit.",
   "commands.fpsm.modify.kits.clear.success": "Successfully cleared start kits for team '%1$s'.",
   "commands.fpsm.modify.kits.clear.failed": "Failed to clear start kits for team '%1$s'.",
   "commands.fpsm.modify.kits.invalidAction": "Invalid action.",
@@ -73,8 +75,8 @@
   "commands.fpsm.team.invalidAction": "Specified an invalid team action.",
   "commands.fpsm.team.notFound": "Team not found.",
   "commands.fpsm.map.notFound": "Map not found.",
-  "commands.fpsm.modify.bombarea.success": "Bomb area added success",
-  "commands.fpsm.modify.bombarea.failed": "Bomb area added failed",
+  "commands.fpsm.modify.bombarea.success": "Bomb area added successfully",
+  "commands.fpsm.modify.bombarea.failed": "Failed to add bomb area",
   "commands.fpsm.modify.spawn.add.success": "Spawn point added for team %1$s.",
   "commands.fpsm.modify.spawn.clear.success": "Spawn points cleared for team %1$s.",
   "commands.fpsm.modify.spawn.clearall.success": "All spawn points cleared.",
@@ -82,39 +84,55 @@
   "commands.fpsm.modify.spawn.set.missing_args": "Missing arguments. Please specify both 'from' and 'to' positions.",
   "commands.fpsm.modify.spawn.set.over_flow": "The area is too large! Maximum allowed distance between points is 11 blocks.",
   "commands.fpsm.modify.spawn.set.success" : "Successfully set %1$s spawn points for team %2$s in the specified area.",
-  "commands.fpsm.help.header": "§6===== FPSM Command Help =====\n",
-  "commands.fpsm.help.footer": "§eUse §6TAB key §efor auto-completion",
+  "commands.fpsm.help.header": "===== FPSM Command Help =====\n",
   "commands.fpsm.help.page_info": "Page %d of %d",
-  "commands.fpsm.help.basic.help": "§a/fpsm help §7- Show this help message",
-  "commands.fpsm.help.basic.save": "§a/fpsm save §7- Save all data",
-  "commands.fpsm.help.basic.sync": "§a/fpsm sync §7- Sync shop data",
-  "commands.fpsm.help.basic.reload": "§a/fpsm reload §7- Reload configuration",
-  "commands.fpsm.help.capability.info": "§a/fpsm help capability <map|team> [page <page>] §7- Show capability commands help",
-  "commands.fpsm.help.capability.map.header": "§6===== Map Capability Command Help =====\n",
-  "commands.fpsm.help.capability.team.header": "§6===== Team Capability Command Help =====\n",
-  "commands.fpsm.help.capability.shop.initialize": "  §b• initialize <type> [startMoney] §7- Initialize shop with specified type and start money",
-  "commands.fpsm.help.capability.shop.reset": "  §b• reset §7- Reset shop player data",
-  "commands.fpsm.help.capability.shop.sync": "  §b• sync §7- Sync shop data",
-  "commands.fpsm.help.capability.shop.info": "  §b• info §7- Show shop information",
-  "commands.fpsm.help.capability.shop.modify": "  §b• modify §7- Modify shop settings",
-  "commands.fpsm.help.capability.spawnpoints.add": "  §b• add §7- Add spawn point at current location",
-  "commands.fpsm.help.capability.spawnpoints.clear": "  §b• clear §7- Clear spawn points for the team",
-  "commands.fpsm.help.capability.spawnpoints.clear_all": "  §b• clear_all §7- Clear all spawn points for all teams",
-  "commands.fpsm.help.capability.spawnpoints.set": "  §b• set <from> <to> §7- Set spawn points in specified area",
-  "commands.fpsm.help.capability.kits.add": "  §b• add [item] [amount] §7- Add item to start kits",
-  "commands.fpsm.help.capability.kits.clear": "  §b• clear §7- Clear all start kits",
-  "commands.fpsm.help.capability.kits.list": "  §b• list §7- List all start kits",
-  "commands.fpsm.help.capability.match_end_teleport_point.set": "  §b• set <point> §7- Set match end teleport point",
-  "commands.fpsm.help.capability.demolition.bomb_area.add": "  §b• bomb_area add <from> <to> §7- Add bomb area",
-  "commands.fpsm.help.category.basic": "Basic Commands",
-  "commands.fpsm.help.category.listener": "Listener Module Commands",
-  "commands.fpsm.help.listener.add_change_item": "§a/fpsm listener_module add change_item_module <changed_cost> <default_cost> §7- Add item change listener module",
-  "commands.fpsm.help.category.map": "Map Commands",
-  "commands.fpsm.help.map.create": "§a/fpsm map create <gameType> <mapName> <from> <to> §7- Create map",
-  "commands.fpsm.help.map.modify": "§a/fpsm map modify <gameType> <mapName> §7- Map configuration",
-  "commands.fpsm.help.map.debug": "   §b• debug <start|reset|newRound|cleanup|switch> §7- Debug commands",
-  "commands.fpsm.help.map.team_join_leave": "   §b• team join/leave [targets] §7- Join/leave team",
-  "commands.fpsm.help.map.team_players": "   §b• team teams <teamName> players <targets> <action> §7- Team player operations",
+  "commands.fpsm.help.no_entries": "No help entries available",
+  "commands.fpsm.help.toggle_failed": "Toggle Failed: No Hash Cached",
+  "commands.fpsm.help.command_not_found": "Command not found: %s",
+  "commands.fpsm.help.basic.help": "Show this help message",
+  "commands.fpsm.help.basic.save": "Save all data",
+  "commands.fpsm.help.basic.sync": "Sync shop data",
+  "commands.fpsm.help.basic.reload": "Reload configuration",
+  "commands.fpsm.help.basic.debug": "Debug commands",
+  "commands.fpsm.help.tacz.dummy": "Set dummy ammo amount",
+  "commands.fpsm.help.category.capability": "Capability Commands",
+  "commands.fpsm.help.map.team": "Team Commands",
+  "commands.fpsm.help.capability.shop.initialize": "Initialize shop with specified type and start money",
+  "commands.fpsm.help.capability.shop.reset": "Reset shop player data",
+  "commands.fpsm.help.capability.shop.sync": "Sync shop data",
+  "commands.fpsm.help.capability.shop.info": "Show shop information",
+  "commands.fpsm.help.capability.shop.modify": "Modify shop settings",
+  "commands.fpsm.help.capability.shop.modify.set.listener_module.add": "Add listener module",
+  "commands.fpsm.help.capability.shop.modify.set.listener_module.remove": "Remove listener module",
+  "commands.fpsm.help.capability.shop.modify.set.group_id": "Set group id",
+  "commands.fpsm.help.capability.shop.modify.set.cost": "Set cost",
+  "commands.fpsm.help.capability.shop.modify.set.item": "Set item",
+  "commands.fpsm.help.capability.shop.modify.set.dummy_ammo_amount": "Set dummyAmmo amount",
+  "commands.fpsm.help.capability.spawnpoints.add": "Add spawn point at current location",
+  "commands.fpsm.help.capability.spawnpoints.clear": "Clear spawn points for the team",
+  "commands.fpsm.help.capability.spawnpoints.clear_all": "Clear all spawn points for all teams",
+  "commands.fpsm.help.capability.spawnpoints.set": "Set spawn points in specified area",
+  "commands.fpsm.help.capability.kits.add": "Add item to start kits",
+  "commands.fpsm.help.capability.kits.clear": "Clear all start kits",
+  "commands.fpsm.help.capability.kits.list": "List all start kits",
+  "commands.fpsm.help.capability.match_end_teleport_point.set": "Set match end teleport point",
+  "commands.fpsm.help.capability.demolition.bomb_area.add": "Add bomb area",
+  "commands.fpsm.help.listener.add": "Add listener module",
+  "commands.fpsm.help.listener.add_change_item": "Add item change listener module",
+  "commands.fpsm.help.map.create": "Create map",
+  "commands.fpsm.help.map.modify": "Map configuration",
+  "commands.fpsm.help.map.debug": "Debug commands",
+  "commands.fpsm.help.map.debug.start": "Start Game",
+  "commands.fpsm.help.map.debug.reset": "Reset Game",
+  "commands.fpsm.help.map.debug.new_round": "Start a new round",
+  "commands.fpsm.help.map.debug.cleanup": "Clean map",
+  "commands.fpsm.help.map.debug.switch": "Switch debug mode",
+  "commands.fpsm.help.map.team.join": "Join team",
+  "commands.fpsm.help.map.team.leave": "Leave team",
+  "commands.fpsm.help.map.team.players": "Team player operations",
+  "commands.fpsm.help.node.expand": "... (%d subcommands)",
+  "commands.fpsm.help.node.toggle.expand": "Expand",
+  "commands.fpsm.help.node.toggle.collapse": "Collapse",
 
   "itemGroup.tab.fpsm": "FPSMatch",
   "item.fpsmatch.smoke_shell" : "Smoke Shell",
