--- a/src/main/resources/assets/fpsmatch/lang/zh_cn.json
+++ b/src/main/resources/assets/fpsmatch/lang/zh_cn.json
@@ -1,4 +1,66 @@
 {
+  "fpsm.shop.title.cooldown": "剩余购买时间 %1$s",
+  "fpsm.shop.title.min.money": "下一轮的最低金额 %1$s",
+  "fpsm.shop.slot.empty": "空",
+  "fpsm.shop.title.equipment": "装备",
+  "fpsm.shop.title.pistol": "手枪",
+  "fpsm.shop.title.mid_rank": "中级",
+  "fpsm.shop.title.rifle": "步枪",
+  "fpsm.shop.title.throwable": "投掷物",
+  "fpsm.unknown_weapon": "未知武器",
+  "fpsm.item.bomb_disposal_kit.drop.message": "你不能丢弃这个物品",
+  "key.fpsm.open.shop.desc": "打开枪械商店",
+  "key.category.fpsm": "FPS Match",
+  "key.fpsm.open.shop.failed.no_map": "因为没有加入任何地图，所以无法打开商店",
+  "key.fpsm.open.shop.failed.game.not_started": "因为游戏未开始，所以无法打开商店",
+  "key.fpsm.open.shop.failed.purchase_time.expired": "因为购买时间已过期，所以无法打开商店",
+  "key.fpsm.open.shop.failed.left.purchase_area": "因为离开了购买区域，所以无法打开商店",
+  "key.fpsm.open.shop.failed.game_type.no_shop": "因为加入的游戏不支持商店，所以无法打开商店",
+  "key.fpsm.dismantle_bomb.desc": "拆除炸弹",
+  "key.fpsm.custom.tab.on": "自定义Tab 开启",
+  "key.fpsm.custom.tab.off": "自定义Tab 关闭",
+  "key.fpsm.custom.tab.desc": "切换自定义Tab",
+  "key.fpsm.hud.custom.desc": "自定义游戏UI",
+  "key.fpsm.hud.custom.on": "自定义游戏UI 开启",
+  "key.fpsm.hud.custom.off": "自定义游戏UI 关闭",
+  "key.fpsm.switch_previous_item.desc": "切换上一快捷栏",
+  "commands.fpsm.debug.success": "FPSMatch 调试模式：%1$s",
+  "commands.fpsm.save.success": "[FPSMatch] 保存成功",
+  "commands.fpsm.sync.success": "[FPSMatch] 同步操作成功完成",
+  "commands.fpsm.team.capability.invalid": "无效的队伍能力：%d",
+  "commands.fpsm.team.leave.failure": "[FPSMatch] 队伍未找到",
+  "commands.fpsm.shop.modify.success": "[FPSMatch] 成功修改了“%1$s”商店的第%3$d个类型为%2$d的商品槽，商品为“%4$s”，价格为%5$d",
+  "commands.fpsm.shop.modify.failed": "[FPSMatch] 修改商店失败请检查您的权限或商店是否存在",
+  "commands.fpsm.modify.kits.add.success": "[FPSMatch] 成功为队伍 '%2$s' 添加了起始装备 '%1$s'",
+  "commands.fpsm.modify.kits.add.empty": "[FPSMatch] 无法添加空物品作为起始装备",
+  "commands.fpsm.modify.kits.add.failed": "[FPSMatch] 添加起始装备失败",
+  "commands.fpsm.modify.kits.clear.success": "[FPSMatch] 成功清除了队伍 '%1$s' 的起始装备",
+  "commands.fpsm.modify.kits.clear.failed": "[FPSMatch] 清除队伍 '%1$s' 的起始装备失败",
+  "commands.fpsm.modify.kits.invalidAction": "[FPSMatch] 无效的操作",
+  "commands.fpsm.modify.kits.list.success": "[FPSMatch] 队伍 '%1$s' 的起始装备列表：%2$d 件",
+  "commands.fpsm.modify.metp.success": "[FPSMatch] 成功设置了游戏结束传送点 '%1$s'",
+  "commands.fpsm.metp.not_available": "[FPSMatch] 地图 %1$s 不支持设置游戏结束传送点。",
+  "commands.fpsm.shop.slot.modify.group.success": "成功修改了商店类型%1$s的第%2$d个插槽的组ID为%3$d",
+  "commands.fpsm.shop.slot.modify.fail": "[FPSMatch] 无法从地图 %2$s 找到 %1$s 商店。",
+  "commands.fpsm.shop.not_available": "[FPSMatch] 地图 %1$s 不是一个支持商店的地图。",
+  "commands.fpsm.shop.slot.listener.remove.success": "[FPSMatch] 成功移除了监听模块%1$s",
+  "commands.fpsm.listener.add.success": "[FPSMatch] 成功添加了监听模块%1$s",
+  "commands.fpsm.reload.success": "[FPSMatch] 重载操作成功完成",
+  "commands.fpsm.shop.modify.gun.success": "[FPSMatch] 成功修改了%1$s商店的第%2$d个插槽，添加了'%3$s'，带有%4$d发虚拟弹药",
+  "commands.fpsm.tacz.dummy.amount.empty_hand": "主手物品栈为空",
+  "commands.fpsm.tacz.dummy.amount.success": "已将 %s 的虚拟弹药数量设置为 %d",
+  "commands.fpsm.tacz.dummy.amount.invalid_gun": "无效的枪支数据",
+  "commands.fpsm.tacz.dummy.amount.not_gun": "物品栈不是枪支",
+  "commands.fpsm.capability.missing": "未找到 %d 能力",
+  "commands.fpsm.modify.shop.initialize.type_not_found": "未找到商店类型：%s",
+  "commands.fpsm.modify.shop.initialize.success": "已为队伍 %s 初始化商店类型 %s，初始资金：%d",
+  "commands.fpsm.modify.shop.initialize.failed": "初始化商店类型 %s 失败",
+  "commands.fpsm.modify.shop.not_initialized": "商店尚未初始化",
+  "commands.fpsm.modify.shop.reset.success": "已重置队伍 %s 的商店玩家数据",
+  "commands.fpsm.modify.shop.sync.success": "已同步队伍 %s 的商店数据",
+  "commands.fpsm.modify.shop.info": "队伍：%s，商店类型：%s，初始资金：%d，玩家数量：%d",
+  "commands.fpsm.shop.modify.cost.success": "[FPSMatch] 成功将%1$s商店槽位%2$s的价格修改为%3$s",
+  "commands.fpsm.shop.modify.item.success": "[FPSMatch] 成功将%1$s商店槽位%2$s的物品修改为%3$s",
   "commands.fpsm.only.player": "[FPSMatch] 只有玩家才能执行这个指令！",
   "commands.fpsm.debug.start.success": "[FPSMatch] 地图“%1$s”的游戏已开始",
   "commands.fpsm.debug.reset.success": "[FPSMatch] 地图“%1$s”的游戏已重置",
@@ -20,43 +82,57 @@
   "commands.fpsm.modify.spawn.set.missing_args": "[FPSMatch] 缺少参数。请指定from和to位置坐标。",
   "commands.fpsm.modify.spawn.set.over_flow": "[FPSMatch] 区域过大！两点间最大允许距离为11格。",
   "commands.fpsm.modify.spawn.set.success": "[FPSMatch] 成功为%2$s队伍在指定区域内设置了%1$s个出生点。",
-  "fpsm.shop.title.cooldown": "剩余购买时间 %1$s",
-  "fpsm.shop.title.min.money": "下一轮的最低金额 %1$s",
-  "fpsm.shop.slot.empty": "空",
-  "key.fpsm.open.shop.desc": "打开枪械商店",
-  "key.category.fpsm": "FPS Match",
-  "key.fpsm.open.shop.failed.no_map": "因为没有加入任何地图，所以无法打开商店",
-  "key.fpsm.open.shop.failed.game.not_started": "因为游戏未开始，所以无法打开商店",
-  "key.fpsm.open.shop.failed.purchase_time.expired": "因为购买时间已过期，所以无法打开商店",
-  "key.fpsm.open.shop.failed.left.purchase_area": "因为离开了购买区域，所以无法打开商店",
-  "key.fpsm.open.shop.failed.game_type.no_shop": "因为加入的游戏不支持商店，所以无法打开商店",
-  "key.fpsm.dismantle_bomb.desc": "拆除炸弹",
-  "commands.fpsm.team.leave.failure": "[FPSMatch] 队伍未找到",
-  "commands.fpsm.shop.modify.success": "[FPSMatch] 成功修改了“%1$s”商店的第%3$d个类型为%2$d的商品槽，商品为“%4$s”，价格为%5$d",
-  "commands.fpsm.shop.modify.failed": "[FPSMatch] 修改商店失败请检查您的权限或商店是否存在",
-  "commands.fpsm.modify.kits.add.success": "[FPSMatch] 成功为队伍 '%2$s' 添加了起始装备 '%1$s'",
-  "commands.fpsm.modify.kits.clear.success": "[FPSMatch] 成功清除了队伍 '%1$s' 的起始装备",
-  "commands.fpsm.modify.kits.clear.failed": "[FPSMatch] 清除队伍 '%1$s' 的起始装备失败",
-  "commands.fpsm.modify.kits.invalidAction": "[FPSMatch] 无效的操作",
-  "commands.fpsm.modify.kits.list.success": "[FPSMatch] 队伍 '%1$s' 的起始装备列表：%2$d 件",
-  "key.fpsm.custom.tab.on": "自定义Tab 开启",
-  "key.fpsm.custom.tab.off": "自定义Tab 关闭",
-  "key.fpsm.custom.tab.desc": "切换自定义Tab",
-  "commands.fpsm.save.success": "[FPSMatch] 保存成功",
-  "commands.fpsm.sync.success": "[FPSMatch] 同步操作成功完成",
-  "commands.fpsm.shop.slot.modify.group.success": "成功修改了商店类型%1$s的第%2$d个插槽的组ID为%3$d",
-  "commands.fpsm.shop.slot.modify.fail": "[FPSMatch] 无法从地图 %2$s 找到 %1$s 商店。",
-  "commands.fpsm.shop.not_available": "[FPSMatch] 地图 %1$s 不是一个支持商店的地图。",
-  "commands.fpsm.shop.slot.listener.remove.success": "[FPSMatch] 成功移除了监听模块%1$s",
-  "commands.fpsm.listener.add.success": "[FPSMatch] 成功添加了监听模块%1$s",
-  "commands.fpsm.reload.success": "[FPSMatch] 重载操作成功完成",
-  "commands.fpsm.shop.modify.gun.success": "[FPSMatch] 成功修改了%1$s商店的第%2$d个插槽，添加了'%3$s'，带有%4$d发虚拟弹药",
-  "fpsm.shop.title.equipment": "装备",
-  "fpsm.shop.title.pistol": "手枪",
-  "fpsm.shop.title.mid_rank": "中级",
-  "fpsm.shop.title.rifle": "步枪",
-  "fpsm.shop.title.throwable": "投掷物",
-  "fpsm.item.bomb_disposal_kit.drop.message": "你不能丢弃这个物品",
+  "commands.fpsm.help.header": "===== FPSM 命令帮助 =====",
+  "commands.fpsm.help.page_info": "第 %d 页，共 %d 页",
+  "commands.fpsm.help.no_entries": "暂无帮助条目",
+  "commands.fpsm.help.toggle_failed": "Toggle Failed: No Hash Cached",
+  "commands.fpsm.help.command_not_found": "命令不存在: %s",
+  "commands.fpsm.help.subcommands_title": "子命令:",
+  "commands.fpsm.help.basic.help": "显示帮助信息",
+  "commands.fpsm.help.basic.save": "保存所有数据",
+  "commands.fpsm.help.basic.sync": "同步商店数据",
+  "commands.fpsm.help.basic.reload": "重新加载配置",
+  "commands.fpsm.help.basic.debug": "调试命令",
+  "commands.fpsm.help.tacz.dummy": "设置虚拟弹药数量",
+  "commands.fpsm.help.category.capability": "能力命令",
+  "commands.fpsm.help.map.team": "队伍命令",
+  "commands.fpsm.help.capability.shop.initialize": "初始化商店",
+  "commands.fpsm.help.capability.shop.reset": "重置商店玩家数据",
+  "commands.fpsm.help.capability.shop.sync": "同步商店数据",
+  "commands.fpsm.help.capability.shop.info": "显示商店信息",
+  "commands.fpsm.help.capability.shop.modify": "修改商店设置",
+  "commands.fpsm.help.capability.shop.modify.set.listener_module.add": "添加监听模块",
+  "commands.fpsm.help.capability.shop.modify.set.listener_module.remove": "移除监听模块",
+  "commands.fpsm.help.capability.shop.modify.set.group_id": "设置分组ID",
+  "commands.fpsm.help.capability.shop.modify.set.cost": "设置价格",
+  "commands.fpsm.help.capability.shop.modify.set.item": "设置物品",
+  "commands.fpsm.help.capability.shop.modify.set.dummy_ammo_amount": "设置虚拟弹药数量",
+  "commands.fpsm.help.capability.spawnpoints.add": "在当前位置添加出生点",
+  "commands.fpsm.help.capability.spawnpoints.clear": "清除队伍的出生点",
+  "commands.fpsm.help.capability.spawnpoints.clear_all": "清除所有队伍的出生点",
+  "commands.fpsm.help.capability.spawnpoints.set": "在指定区域设置出生点",
+  "commands.fpsm.help.capability.kits.add": " 向起始装备添加物品",
+  "commands.fpsm.help.capability.kits.clear": "清除所有起始装备",
+  "commands.fpsm.help.capability.kits.list": "列出所有起始装备",
+  "commands.fpsm.help.capability.match_end_teleport_point.set": "设置比赛结束传送点",
+  "commands.fpsm.help.capability.demolition.bomb_area.add": "添加炸弹区域",
+  "commands.fpsm.help.listener.add": "注册新的监听模块",
+  "commands.fpsm.help.listener.add_change_item": "注册物品变更监听模块",
+  "commands.fpsm.help.map.create": "创建地图",
+  "commands.fpsm.help.map.modify": "地图配置",
+  "commands.fpsm.help.map.debug": "调试命令",
+  "commands.fpsm.help.map.debug.start": "开始游戏",
+  "commands.fpsm.help.map.debug.reset": "重置游戏",
+  "commands.fpsm.help.map.debug.new_round": "开始新回合",
+  "commands.fpsm.help.map.debug.cleanup": "清理地图",
+  "commands.fpsm.help.map.debug.switch": "切换调试模式",
+  "commands.fpsm.help.map.team.join": "加入队伍",
+  "commands.fpsm.help.map.team.leave": "离开队伍",
+  "commands.fpsm.help.map.team.players": "队伍玩家操作",
+  "commands.fpsm.help.node.expand": "... (%d个子命令)",
+  "commands.fpsm.help.node.toggle.expand": "展开",
+  "commands.fpsm.help.node.toggle.collapse": "收起",
+  "itemGroup.tab.fpsm": "FPSMatch",
   "item.fpsmatch.smoke_shell": "烟雾弹",
   "item.fpsmatch.bomb_disposal_kit": "拆弹工具",
   "item.fpsmatch.flash_bomb": "闪光弹",
@@ -65,29 +141,25 @@
   "item.fpsmatch.t_incendiary_grenade": "燃烧弹",
   "item.fpsmatch.bulletproof_armor": "测试物品 - 防弹护甲",
   "item.fpsmatch.bulletproof_with_helmet": "测试物品 - 防弹护甲与头盔",
-  "key.fpsm.hud.custom.desc": "自定义游戏UI",
-  "key.fpsm.hud.custom.on": "自定义游戏UI 开启",
-  "key.fpsm.hud.custom.off": "自定义游戏UI 关闭",
-  "commands.fpsm.shop.modify.cost.success": "[FPSMatch] 成功将%1$s商店槽位%2$s的价格修改为%3$s",
-  "commands.fpsm.shop.modify.item.success": "[FPSMatch] 成功将%1$s商店槽位%2$s的物品修改为%3$s",
-  "gui.fpsm.shop_editor.title": "商店内容编辑器",
-  "gui.fpsm.edit_shop_slot.title": "编辑当前槽位",
-  "gui.fpsm.shop_editor.save_button": "确认并保存",
   "item.fpsmatch.shop_edit_tool": "商店内容编辑工具",
-  "tooltip.fpsm.shop_edit_tool.map_selected": "当前选中地图 :",
-  "tooltip.fpsm.shop_edit_tool.team_selected": "当前选中队伍 :",
   "message.fpsm.shop_edit_tool.all_maps": "所有可用地图 : ",
   "message.fpsm.shop_edit_tool.all_shops": "所有可用商店 : ",
   "message.fpsm.shop_edit_tool.select_map": "你选择了 地图 : ",
   "message.fpsm.shop_edit_tool.select_and_join_shop": "你选择了商店并加入了队伍 :",
   "message.fpsm.shop_edit_tool.missing_map": "没有可用地图！",
   "message.fpsm.shop_edit_tool.missing_shop": "没有可用商店!",
-  "itemGroup.tab.fpsm": "FPSMatch",
+  "message.fpsmatch.error.no_spawn_points": "没有队伍出生点来开始游戏",
+  "message.fpsmatch.error.not_enough_spawn_points": "没有足够的队伍出生点来开始游戏",
+  "gui.fpsm.shop_editor.title": "商店内容编辑器",
+  "gui.fpsm.edit_shop_slot.title": "编辑当前槽位",
+  "gui.fpsm.shop_editor.save_button": "确认并保存",
   "gui.fpsm.dummyAmmo": "虚拟弹药",
   "gui.fpsm.name": "名称",
   "gui.fpsm.price": "价格",
   "gui.fpsm.group": "组ID",
   "gui.fpsm.listener": "监听模块",
+  "tooltip.fpsm.shop_edit_tool.map_selected": "当前选中地图 :",
+  "tooltip.fpsm.shop_edit_tool.team_selected": "当前选中队伍 :",
   "tooltip.fpsm.separator": "======================",
   "tooltip.fpsm.selected_map": "当前选择地图",
   "tooltip.fpsm.selected_shop": "当前选择商店",
@@ -96,32 +168,6 @@
   "tooltip.fpsm.switch_shop": "[SHIFT + 右键] 切换商店",
   "tooltip.fpsm.switch_map": "[SHIFT + 左键] 切换地图",
   "tooltip.fpsm.open_editor": "[右键] 打开商店编辑器",
-  "message.fpsmatch.error.no_spawn_points": "没有队伍出生点来开始游戏",
-  "message.fpsmatch.error.not_enough_spawn_points": "没有足够的队伍出生点来开始游戏",
-  "key.fpsm.switch_previous_item.desc": "切换上一快捷栏",
-  "commands.fpsm.metp.not_available": "[FPSMatch] 地图 %1$s 不支持设置游戏结束传送点。",
-  "commands.fpsm.modify.metp.success": "[FPSMatch] 成功设置了游戏结束传送点 '%1$s'",
-  "commands.fpsm.help.header": "§6===== FPSM 命令帮助 =====\n",
-  "commands.fpsm.help.footer": "§e使用 §6TAB键 §e自动补全命令参数",
-  "commands.fpsm.help.page_info": "第 %d 页，共 %d 页",
-  
-  "commands.fpsm.help.category.basic": "基础命令",
-  "commands.fpsm.help.basic.help": "§a/fpsm help [page <页码>] §7- 显示帮助信息",
-  "commands.fpsm.help.basic.save": "§a/fpsm save §7- 保存所有数据",
-  "commands.fpsm.help.basic.sync": "§a/fpsm sync §7- 同步商店数据",
-  "commands.fpsm.help.basic.reload": "§a/fpsm reload §7- 重新加载配置",
-  
-  "commands.fpsm.help.category.listener": "监听模块命令",
-  "commands.fpsm.help.listener.add_change_item": "§a/fpsm listener_module add change_item_module <changed_cost> <default_cost> §7- 添加物品变更监听模块",
-  "commands.fpsm.help.category.map": "地图命令",
-  "commands.fpsm.help.map.create": "§a/fpsm map create <gameType> <mapName> <from> <to> §7- 创建地图",
-  "commands.fpsm.help.map.modify": "§a/fpsm map modify <gameType> <mapName> §7- 地图配置",
-  "commands.fpsm.help.map.debug": "   §b• debug <start|reset|newRound|cleanup|switch> §7- 调试命令",
-  "commands.fpsm.help.map.team_join_leave": "   §b• team join/leave [targets] §7- 加入/离开队伍",
-  "commands.fpsm.help.map.team_players": "   §b• team teams <teamName> players <targets> <action> §7- 队伍玩家操作",
-  "commands.fpsm.help.capability.map.header": "§6===== 地图能力命令帮助 =====\n",
-  "commands.fpsm.help.capability.team.header": "§6===== 队伍能力命令帮助 =====\n",
-
   "config.fpsmatch.client": "客户端设置",
   "config.fpsmatch.client.no_settings": "当前没有客户端特定设置",
   "config.fpsmatch.common.drops": "武器拾取设置",
@@ -149,35 +195,5 @@
   "config.fpsmatch.common.throwable.incendiary_grenade_damage": "燃烧弹伤害",
   "config.fpsmatch.common.throwable.incendiary_grenade_damage.tooltip": "燃烧弹的伤害",
   "config.fpsmatch.common.throwable.smoke_shell_living_time": "烟雾弹存活时间",
-  "config.fpsmatch.common.throwable.smoke_shell_living_time.tooltip": "烟雾弹激活后的存活时间 (tick)。20 tick = 1秒",
-
-  "commands.fpsm.team.capability.invalid": "无效的队伍能力：%d",
-  "commands.fpsm.debug.success": "FPSMatch 调试模式：%1$s",
-  "fpsm.unknown_weapon": "未知武器",
-  "commands.fpsm.tacz.dummy.amount.empty_hand": "主手物品栈为空",
-  "commands.fpsm.tacz.dummy.amount.success": "已将 %s 的虚拟弹药数量设置为 %d",
-  "commands.fpsm.tacz.dummy.amount.invalid_gun": "无效的枪支数据",
-  "commands.fpsm.tacz.dummy.amount.not_gun": "物品栈不是枪支",
-  "commands.fpsm.capability.missing": "未找到 %d 能力",
-  "commands.fpsm.modify.shop.initialize.type_not_found": "未找到商店类型：%s",
-  "commands.fpsm.modify.shop.initialize.success": "已为队伍 %s 初始化商店类型 %s，初始资金：%d",
-  "commands.fpsm.modify.shop.initialize.failed": "初始化商店类型 %s 失败",
-  "commands.fpsm.modify.shop.not_initialized": "商店尚未初始化",
-  "commands.fpsm.modify.shop.reset.success": "已重置队伍 %s 的商店玩家数据",
-  "commands.fpsm.modify.shop.sync.success": "已同步队伍 %s 的商店数据",
-  "commands.fpsm.modify.shop.info": "队伍：%s，商店类型：%s，初始资金：%d，玩家数量：%d",
-  "commands.fpsm.help.capability.shop.initialize": "  §b• initialize <type> [startMoney] §7- 使用指定类型和初始资金初始化商店",
-  "commands.fpsm.help.capability.shop.reset": "  §b• reset §7- 重置商店玩家数据",
-  "commands.fpsm.help.capability.shop.sync": "  §b• sync §7- 同步商店数据",
-  "commands.fpsm.help.capability.shop.info": "  §b• info §7- 显示商店信息",
-  "commands.fpsm.help.capability.shop.modify": "  §b• modify §7- 修改商店设置",
-  "commands.fpsm.help.capability.spawnpoints.add": "  §b• add §7- 在当前位置添加出生点",
-  "commands.fpsm.help.capability.spawnpoints.clear": "  §b• clear §7- 清除队伍的出生点",
-  "commands.fpsm.help.capability.spawnpoints.clear_all": "  §b• clear_all §7- 清除所有队伍的出生点",
-  "commands.fpsm.help.capability.spawnpoints.set": "  §b• set <from> <to> §7- 在指定区域设置出生点",
-  "commands.fpsm.help.capability.kits.add": "  §b• add [item] [amount] §7- 向起始装备添加物品",
-  "commands.fpsm.help.capability.kits.clear": "  §b• clear §7- 清除所有起始装备",
-  "commands.fpsm.help.capability.kits.list": "  §b• list §7- 列出所有起始装备",
-  "commands.fpsm.help.capability.match_end_teleport_point.add": "  §b• add <point> §7- 设置比赛结束传送点",
-  "commands.fpsm.help.capability.demolition.bomb_area.add": "  §b• bomb_area add <from> <to> §7- 添加炸弹区域"
+  "config.fpsmatch.common.throwable.smoke_shell_living_time.tooltip": "烟雾弹激活后的存活时间 (tick)。20 tick = 1秒"
 }
