v 1.3.0 Part 11 正在收尾~ BUG FIX - 修复了JsonFixer无法根据Class找到对应版本的Fixer的BUG CHANGE - 给SpawnPointCapability和StartKitCapability添加了数据持久化 ADD - 命令帮助系统现在支持添加悬浮文本了 BUG FIX - 修复了子指令create与子指令modify没有并入map分支下的BUG CHANGE - 部分类重命名 ADD - 新增部分工具方法 BUG FIX - 修复了保存系统没有根据真实的数据文件路径来读取数据的BUG

--- a/src/main/resources/assets/fpsmatch/lang/en_us.json
+++ b/src/main/resources/assets/fpsmatch/lang/en_us.json
@@ -118,8 +118,10 @@
   "commands.fpsm.help.capability.match_end_teleport_point.set": "Set match end teleport point",
   "commands.fpsm.help.capability.demolition.bomb_area.add": "Add bomb area",
   "commands.fpsm.help.listener.add": "Add listener module",
-  "commands.fpsm.help.listener.add_change_item": "Add item change listener module",
+  "commands.fpsm.help.listener.add_change_item": "Add item change module",
+  "commands.fpsm.help.listener.add_change_item.hover": "Description: Creates a module that changes the shop item and cost when the slot is bought, and restores when returned.\nParameters:\ndefault_cost - The cost of the default item (offhand item) in the shop slot.\nchanged_cost - The cost of the changed item (mainhand item) in the shop slot.\nRequires: The player must hold the default item in the offhand and the changed item in the main hand.",
   "commands.fpsm.help.map.create": "Create map",
+  "commands.fpsm.help.map.create.hover": "Description: Creates a game map area without setting spawn points, defining only the game boundaries.\nParameters:\nmapName - The unique name for the map being created.\ngameType - The game mode type.\nfrom - The first corner coordinate of the area (format: x y z or ~x ~y ~z).\nto - The second corner coordinate of the area (format: x y z or ~x ~y ~z).\nRequires: OP permission and a valid game type must be pre-registered in the system. Coordinates define a valid 3D area.",
   "commands.fpsm.help.map.modify": "Map configuration",
   "commands.fpsm.help.map.debug": "Debug commands",
   "commands.fpsm.help.map.debug.start": "Start Game",
