--- a/src/main/resources/assets/fpsmatch/lang/zh_cn.json
+++ b/src/main/resources/assets/fpsmatch/lang/zh_cn.json
@@ -87,7 +87,6 @@
   "commands.fpsm.help.no_entries": "暂无帮助条目",
   "commands.fpsm.help.toggle_failed": "Toggle Failed: No Hash Cached",
   "commands.fpsm.help.command_not_found": "命令不存在: %s",
-  "commands.fpsm.help.subcommands_title": "子命令:",
   "commands.fpsm.help.basic.help": "显示帮助信息",
   "commands.fpsm.help.basic.save": "保存所有数据",
   "commands.fpsm.help.basic.sync": "同步商店数据",
@@ -117,8 +116,10 @@
   "commands.fpsm.help.capability.match_end_teleport_point.set": "设置比赛结束传送点",
   "commands.fpsm.help.capability.demolition.bomb_area.add": "添加炸弹区域",
   "commands.fpsm.help.listener.add": "注册新的监听模块",
-  "commands.fpsm.help.listener.add_change_item": "注册物品变更监听模块",
+  "commands.fpsm.help.listener.add_change_item": "物品变更模块",
+  "commands.fpsm.help.listener.add_change_item.hover": "描述：创建一个模块，用于在商店槽位被购买时更改物品和价格，并在退回时恢复。\n参数：\ndefault_cost - 商店槽位中默认物品（副手物品）的价格。\nchanged_cost - 商店槽位中更改后物品（主手物品）的价格。\n要求：玩家必须将默认物品拿在副手，更改后物品拿在主手。",
   "commands.fpsm.help.map.create": "创建地图",
+  "commands.fpsm.help.map.create.hover": "描述：创建没有出生点的游戏地图区域，仅定义地图边界。\n参数：\nmapName - 要创建的地图名称。\ngameType - 游戏模式类型。\nfrom - 区域的第一个对角点坐标（格式：x y z 或 ~x ~y ~z）。\nto - 区域的第二个对角点坐标（格式：x y z 或 ~x ~y ~z）。\n要求：需要OP权限且游戏类型必须在系统中预注册。坐标必须定义有效的三维区域。",
   "commands.fpsm.help.map.modify": "地图配置",
   "commands.fpsm.help.map.debug": "调试命令",
   "commands.fpsm.help.map.debug.start": "开始游戏",
