--- a/src/main/resources/assets/fpsmatch/lang/en_us.json
+++ b/src/main/resources/assets/fpsmatch/lang/en_us.json
@@ -147,12 +147,21 @@
   "item.fpsmatch.bulletproof_with_helmet" : "TestItem - Bulletproof Armor with Helmet",
   "item.fpsmatch.shop_edit_tool": "shop edit tool",
 
-  "message.fpsm.shop_edit_tool.all_maps": "All Available Maps :",
-  "message.fpsm.shop_edit_tool.all_shops": "All Available Shops :",
-  "message.fpsm.shop_edit_tool.select_map": "You choose Map :",
-  "message.fpsm.shop_edit_tool.select_and_join_shop": "You choose Shop and join Team :",
-  "message.fpsm.shop_edit_tool.missing_map": "No Map is available!",
-  "message.fpsm.shop_edit_tool.missing_shop": "No Shop is available!",
+  "message.fpsm.shop_edit_tool.missing_type": "No available map types!",
+  "message.fpsm.shop_edit_tool.switch_type": "Game Type: %s",
+  "message.fpsm.shop_edit_tool.missing_map_by_type": "No available maps for type [%s]!",
+  "message.fpsm.shop_edit_tool.missing_shop": "No available shops!",
+  "message.fpsm.shop_edit_tool.missing_map": "No available maps!",
+  "message.fpsm.shop_edit_tool.load_from_team": "Loaded data from your team: Type=%s, Map=%s, Shop=%s",
+  "message.fpsm.shop_edit_tool.map_reset_after_type_switch": "Map reset to: %s (type switched)",
+  "message.fpsm.shop_edit_tool.mode.type": "Game Type",
+  "message.fpsm.shop_edit_tool.mode.map": "Map",
+  "message.fpsm.shop_edit_tool.mode.team": "Team",
+  "message.fpsm.shop_edit_tool.switch_mode": "Edit Mode: %s",
+  "message.fpsm.shop_edit_tool.switch_map": "Map: %s",
+  "message.fpsm.shop_edit_tool.switch_team": "Team: %s",
+  "message.fpsm.shop_edit_tool.clear": "Cleared ShopEditTool Data",
+
   "message.fpsmatch.error.no_spawn_points": "There is no spawn-points for the game to start",
   "message.fpsmatch.error.not_enough_spawn_points": "There are not enough spawn-points for the game to start",
 
@@ -165,16 +174,25 @@
   "gui.fpsm.group": "GroupID",
   "gui.fpsm.listener": "Listening Module",
 
-  "tooltip.fpsm.shop_edit_tool.map_selected": "Current Selected Map :",
-  "tooltip.fpsm.shop_edit_tool.team_selected": "Current Selected Team :",
+  "gui.shop.slot.tooltip.item": "Item: ",
+  "gui.shop.slot.tooltip.default_cost": "Default Price: ",
+  "gui.shop.slot.tooltip.ammo_count": "Ammo Count: ",
+  "gui.shop.slot.tooltip.group_id": "Group ID: ",
+  "gui.shop.slot.tooltip.listeners": "Listeners: ",
+  "gui.shop.slot.tooltip.edit_prompt": "Click to enter the secondary interface for editing",
+
+  "tooltip.fpsm.shop_edit_tool.switch.mode": "[Left Click] Switch Edit Mode",
+  "tooltip.fpsm.shop_edit_tool.clear": "[SHIFT + Double Left Click] Clear Edit Data",
+  "tooltip.fpsm.shop_edit_tool.switch_map": "[Shift + Right Click] Switch Mode Content",
+  "tooltip.fpsm.shop_edit_tool.open_editor": "[Right Click] Open Shop Editor",
+
+  "tooltip.fpsm.shop_edit_tool.selected.mode": "Current Edit Mode",
+  "tooltip.fpsm.shop_edit_tool.selected.type": "Selected Game Type",
+  "tooltip.fpsm.shop_edit_tool.selected.map": "Selected Map",
+  "tooltip.fpsm.shop_edit_tool.selected.shop": "Selected Shop",
   "tooltip.fpsm.separator": "======================",
-  "tooltip.fpsm.selected_map": "Current Selected Map",
-  "tooltip.fpsm.selected_shop": "Current Selected Shop",
   "tooltip.fpsm.none": "N/A",
-  "tooltip.fpsm.usage_info": "Usage:",
-  "tooltip.fpsm.switch_shop": "[SHIFT + Right Click] Switch Shop",
-  "tooltip.fpsm.switch_map": "[SHIFT + Left Click] Switch Map",
-  "tooltip.fpsm.open_editor": "[Right Click] Open Shop Editor",
+  "tooltip.fpsm.usage": "Usage:",
 
   "config.fpsmatch.client": "Client Settings",
   "config.fpsmatch.client.no_settings": "No client-specific settings currently",
@@ -203,5 +221,6 @@
   "config.fpsmatch.common.throwable.incendiary_grenade_damage": "Incendiary Grenade Damage",
   "config.fpsmatch.common.throwable.incendiary_grenade_damage.tooltip": "Damage value of incendiary grenades",
   "config.fpsmatch.common.throwable.smoke_shell_living_time": "Smoke Shell Living Time",
-  "config.fpsmatch.common.throwable.smoke_shell_living_time.tooltip": "Survival time after smoke bomb activation (ticks). 20 ticks = 1 second"
+  "config.fpsmatch.common.throwable.smoke_shell_living_time.tooltip": "Survival time after smoke bomb activation (ticks). 20 ticks = 1 second",
+  "gui.fpsm.dummy_ammo": "dummy ammo"
 }
