--- a/src/main/resources/assets/fpsmatch/lang/zh_cn.json
+++ b/src/main/resources/assets/fpsmatch/lang/zh_cn.json
@@ -85,7 +85,7 @@
   "commands.fpsm.help.header": "===== FPSM 命令帮助 =====",
   "commands.fpsm.help.page_info": "第 %d 页，共 %d 页",
   "commands.fpsm.help.no_entries": "暂无帮助条目",
-  "commands.fpsm.help.toggle_failed": "Toggle Failed: No Hash Cached",
+  "commands.fpsm.help.toggle_failed": "切换失败: 没有哈希数据被缓存",
   "commands.fpsm.help.command_not_found": "命令不存在: %s",
   "commands.fpsm.help.basic.help": "显示帮助信息",
   "commands.fpsm.help.basic.save": "保存所有数据",
@@ -143,12 +143,12 @@
   "item.fpsmatch.bulletproof_armor": "测试物品 - 防弹护甲",
   "item.fpsmatch.bulletproof_with_helmet": "测试物品 - 防弹护甲与头盔",
   "item.fpsmatch.shop_edit_tool": "商店内容编辑工具",
-  "message.fpsm.shop_edit_tool.all_maps": "所有可用地图 : ",
-  "message.fpsm.shop_edit_tool.all_shops": "所有可用商店 : ",
-  "message.fpsm.shop_edit_tool.select_map": "你选择了 地图 : ",
-  "message.fpsm.shop_edit_tool.select_and_join_shop": "你选择了商店并加入了队伍 :",
+  "message.fpsm.shop_edit_tool.missing_type": "没有可用的游戏类型！",
+  "message.fpsm.shop_edit_tool.switch_type": "游戏类型: %s",
+  "message.fpsm.shop_edit_tool.missing_map_by_type": "[%s] 游戏类型中没有可用的地图！",
+  "message.fpsm.shop_edit_tool.missing_shop": "没有可用商店！",
   "message.fpsm.shop_edit_tool.missing_map": "没有可用地图！",
-  "message.fpsm.shop_edit_tool.missing_shop": "没有可用商店!",
+  "message.fpsm.shop_edit_tool.clear": "已清除商店编辑工具数据",
   "message.fpsmatch.error.no_spawn_points": "没有队伍出生点来开始游戏",
   "message.fpsmatch.error.not_enough_spawn_points": "没有足够的队伍出生点来开始游戏",
   "gui.fpsm.shop_editor.title": "商店内容编辑器",
@@ -159,16 +159,24 @@
   "gui.fpsm.price": "价格",
   "gui.fpsm.group": "组ID",
   "gui.fpsm.listener": "监听模块",
-  "tooltip.fpsm.shop_edit_tool.map_selected": "当前选中地图 :",
-  "tooltip.fpsm.shop_edit_tool.team_selected": "当前选中队伍 :",
+  "gui.shop.slot.tooltip.item": "物品：",
+  "gui.shop.slot.tooltip.default_cost": "默认价格：",
+  "gui.shop.slot.tooltip.ammo_count": "弹药数量：",
+  "gui.shop.slot.tooltip.group_id": "分组ID：",
+  "gui.shop.slot.tooltip.listeners": "监听器：",
+  "gui.shop.slot.tooltip.edit_prompt": "点击进入二级界面进行编辑",
+
+  "tooltip.fpsm.shop_edit_tool.switch.mode": "[鼠标左键] 切换编辑模式",
+  "tooltip.fpsm.shop_edit_tool.clear": "[Shift + 双击鼠标左键] 清除编辑工具数据",
+  "tooltip.fpsm.shop_edit_tool.switch_map": "[Shift + 鼠标右键] 切换所选模式的内容",
+  "tooltip.fpsm.shop_edit_tool.open_editor": "[右键] 打开商店编辑器",
+  "tooltip.fpsm.shop_edit_tool.selected.mode": "编辑模式",
+  "tooltip.fpsm.shop_edit_tool.selected.type": "游戏类型",
+  "tooltip.fpsm.shop_edit_tool.selected.map": "地图",
+  "tooltip.fpsm.shop_edit_tool.selected.shop": "队伍",
   "tooltip.fpsm.separator": "======================",
-  "tooltip.fpsm.selected_map": "当前选择地图",
-  "tooltip.fpsm.selected_shop": "当前选择商店",
   "tooltip.fpsm.none": "无",
-  "tooltip.fpsm.usage_info": "使用方法：",
-  "tooltip.fpsm.switch_shop": "[SHIFT + 右键] 切换商店",
-  "tooltip.fpsm.switch_map": "[SHIFT + 左键] 切换地图",
-  "tooltip.fpsm.open_editor": "[右键] 打开商店编辑器",
+  "tooltip.fpsm.usage": "用法:",
   "config.fpsmatch.client": "客户端设置",
   "config.fpsmatch.client.no_settings": "当前没有客户端特定设置",
   "config.fpsmatch.common.drops": "武器拾取设置",
@@ -196,5 +204,14 @@
   "config.fpsmatch.common.throwable.incendiary_grenade_damage": "燃烧弹伤害",
   "config.fpsmatch.common.throwable.incendiary_grenade_damage.tooltip": "燃烧弹的伤害",
   "config.fpsmatch.common.throwable.smoke_shell_living_time": "烟雾弹存活时间",
-  "config.fpsmatch.common.throwable.smoke_shell_living_time.tooltip": "烟雾弹激活后的存活时间 (tick)。20 tick = 1秒"
+  "config.fpsmatch.common.throwable.smoke_shell_living_time.tooltip": "烟雾弹激活后的存活时间 (tick)。20 tick = 1秒",
+  "gui.fpsm.dummy_ammo": "虚拟弹药",
+  "message.fpsm.shop_edit_tool.load_from_team": "已经从你所在的队伍加载数据: 游戏类型=%s, 地图=%s, 队伍=%s",
+  "message.fpsm.shop_edit_tool.map_reset_after_type_switch": "地图重置为: %s (游戏类型改变)",
+  "message.fpsm.shop_edit_tool.mode.type": "游戏类型",
+  "message.fpsm.shop_edit_tool.mode.map": "地图",
+  "message.fpsm.shop_edit_tool.mode.team": "队伍",
+  "message.fpsm.shop_edit_tool.switch_mode": "编辑模式: %s",
+  "message.fpsm.shop_edit_tool.switch_team": "队伍: %s",
+  "message.fpsm.shop_edit_tool.switch_map": "地图: %s"
 }
